/*
 * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 * Click nbfs://nbhost/SystemFileSystem/Templates/Classes/Class.java to edit this template
 */
package javafinal;

/**
 *
 * @author belki
 */
public class PatenteDuplicadaException extends Exception{
    public PatenteDuplicadaException(String mensaje) {
        super(mensaje);
    }
    
}
