/*
 * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 * Click nbfs://nbhost/SystemFileSystem/Templates/Classes/Class.java to edit this template
 */
package javafinal;

/**
 *
 * @author belki
 */
public class VehiculoNoEncontradoException extends Exception{
    public VehiculoNoEncontradoException(String mensaje) {
        super(mensaje);
    }
    
}
